# EventWithRust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  index.d.ts  index.js  package.json
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.mjs
benchmarks/: package-lock.json  package.json  start.sh
benchmarks/test/base/: emit.js
crates/event_emitter/: Cargo.toml
crates/event_emitter/src/: lib.rs
crates/event_emitter/src/internal/: event_emmiter.rs  js_function.rs  mod.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
