[package]
authors = ["오병진 <qudwls185@naver.com>"]
edition = "2021"
name = "event_emitter"
version = "0.0.1"
description = "Rewrite it in Rust"

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
fxhash = "0.2.1"
serde_json = "1.0.97"
serde = "1.0.164"
