[package]
authors = ["오병진 <qudwls185@naver.com>"]
edition = "2021"
name = "sunrabbit_events"
version = "0.0.1"
description = "Rewrite it in Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
event_emitter = { path = "../event_emitter" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true